compiler-core/src/type_/snapshots/gleam_core__type___tests__const_record_spread_multi_variant_wrong_variant.snap
---
source: compiler-core/src/type_/tests.rs
expression: "pub type Pet {\n          Dog(name: String, age: Int)\n          Cat(name: String, breed: String)\n        }\n\n        pub const my_dog = Dog(\"Rex\", 5)\n        pub const my_cat = Cat(..my_dog, breed: \"Siamese\")"
---
----- SOURCE CODE
pub type Pet {
          Dog(name: String, age: Int)
          Cat(name: String, breed: String)
        }

        pub const my_dog = Dog("Rex", 5)
        pub const my_cat = Cat(..my_dog, breed: "Siamese")

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:7:28
  │
7 │         pub const my_cat = Cat(..my_dog, breed: "Siamese")
  │                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This is a `Dog`, not a `Cat`

The record being spread is a `Dog` but you are trying to construct a `Cat`.
