compiler-core/src/type_/snapshots/gleam_core__type___tests__const_record_spread_non_record.snap
---
source: compiler-core/src/type_/tests.rs
expression: "pub type Person { Person(name: String, age: Int) }\n        pub const not_a_record = 42\n        pub const bob = Person(..not_a_record, name: \"Bob\")"
---
----- SOURCE CODE
pub type Person { Person(name: String, age: Int) }
        pub const not_a_record = 42
        pub const bob = Person(..not_a_record, name: "Bob")

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:34
  │
3 │         pub const bob = Person(..not_a_record, name: "Bob")
  │                                  ^^^^^^^^^^^^

Expected type:

    Person

Found type:

    Int
