compiler-core/src/type_/snapshots/gleam_core__type___tests__const_record_spread_variant_without_args_warning.snap
---
source: compiler-core/src/type_/tests.rs
expression: "pub type Status { Active Inactive }\n        pub const status1 = Active\n        pub const status2 = Active(..status1)"
---
----- SOURCE CODE
pub type Status { Active Inactive }
        pub const status1 = Active
        pub const status2 = Active(..status1)

----- WARNING
warning: Fieldless record update
  ┌─ /src/warning/wrn.gleam:3:29
  │
3 │         pub const status2 = Active(..status1)
  │                             ^^^^^^^^^^^^^^^^^ This record update doesn't change any fields

Hint: Add some fields to change or replace it with the record itself.
