compiler-core/src/type_/snapshots/gleam_core__type___tests__const_record_update_type_mismatch_error.snap
---
source: compiler-core/src/type_/tests.rs
expression: "pub type Person { Person(name: String, age: Int) }\n        pub type Animal { Animal(species: String) }\n\n        pub const alice = Person(\"Alice\", 30)\n        pub const dog = Animal(..alice)"
---
----- SOURCE CODE
pub type Person { Person(name: String, age: Int) }
        pub type Animal { Animal(species: String) }

        pub const alice = Person("Alice", 30)
        pub const dog = Animal(..alice)

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:5:34
  │
5 │         pub const dog = Animal(..alice)
  │                                  ^^^^^

Expected type:

    Animal

Found type:

    Person
